--- a/form.html
+++ b/form.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Пинк</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
-    <script>
-      // Picture element HTML5 shiv
-      document.createElement( "picture" );
-    </script>
-    <script src="js/picturefill.min.js" async></script>
-  </head>
 
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Пинк</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="css/style.css">
+  <script>
+    // Picture element HTML5 shiv
+    document.createElement("picture");
+  </script>
+  <script src="js/picturefill.min.js" async></script>
+</head>
 
-    <div class="page-container">
+<body>
 
-      <header class="page-header">
-          <nav class="main-nav  main-nav--closed main-nav--nojs">
-            <div class="main-nav__wrapper">
-              <div class="main-nav__logo">
-                <picture>
-                    <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
-                    <source media="(min-width: 640px)" srcset="img/logo-pink-white-tablet.svg">
-                    <img class="main-nav__app-name" width="75" height="22" src="img/logo-pink-white-mobile.svg"
-                    alt="Logo PINK">
-                </picture>
-                <button class="main-nav__toggle" type="button"></button>
-              </div>
-              <ul class="main-nav__items">
-                <li class="main-nav__item main-nav__item--active"><a href="index.html">Главная</a></li>
-                <li class="main-nav__item"><a href="photo.html">Фотографии</a></li>
-                <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
-                <li class="main-nav__item"><a href="https://htmlacademy.ru">HTML Academy</a></li>
-              </ul>
-            </div>
-          </nav>
-          <p class="page-header__page-name page-header__page-name--form">Конкурс на самое безбашенное путешествие с Пинк</p>
-      </header>
+  <div class="page-container">
+
+    <header class="page-header">
+      <nav class="main-nav  main-nav--closed main-nav--nojs">
+        <div class="main-nav__wrapper">
+          <div class="main-nav__logo">
+            <picture>
+              <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
+              <source media="(min-width: 640px)" srcset="img/logo-pink-white-tablet.svg">
+              <img class="main-nav__app-name" width="75" height="22" src="img/logo-pink-white-mobile.svg" alt="Logo PINK">
+            </picture>
+            <button class="main-nav__toggle" type="button"></button>
+          </div>
+          <ul class="main-nav__items">
+            <li class="main-nav__item main-nav__item--active"><a href="index.html">Главная</a></li>
+            <li class="main-nav__item"><a href="photo.html">Фотографии</a></li>
+            <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
+            <li class="main-nav__item"><a href="https://htmlacademy.ru">HTML Academy</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p class="page-header__page-name page-header__page-name--form">Конкурс на самое безбашенное путешествие с Пинк</p>
+    </header>
 
 
     <main class="main-container">
 
       <div class="head-rule">
         <p class="head-rule__content block-wrapper">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
-            <span class="head-rule__ask">Пожалуйста, заполните форму ниже:</span>
+          <span class="head-rule__ask">Пожалуйста, заполните форму ниже:</span>
         </p>
       </div>
 
@@ -68,32 +68,40 @@
         <div class="competition-form__block competition-form__block--2">
           <h2 class="competition-form__block-header">Ваши безбашенные достижения в путешествии</h2>
           <div class="competition-form__block-wrapper">
-              <div class="competition-form__checkbox-wrapper">
-                <input type="checkbox" class="competition-form__checkbox" name="fact_1" id="fact_1">
-                <label for="fact_1" class="competition-form__label-right">Сделал селфи с акулой</label>
-              </div>
-              <div class="competition-form__checkbox-wrapper">
-                <input type="checkbox" class="competition-form__checkbox" name="fact_2" id="fact_2">
-                <label for="fact_2" class="competition-form__label-right">Обгорел на пляже</label>
-              </div>
-              <div class="competition-form__checkbox-wrapper">
-                <input type="checkbox" class="competition-form__checkbox" name="fact_3" id="fact_3">
-                <label for="fact_3" class="competition-form__label-right">Видел Чака Норриса</label>
-              </div>
-              <div class="competition-form__checkbox-wrapper">
-                <input type="checkbox" class="competition-form__checkbox" name="fact_4" id="fact_4" checked>
-                <label for="fact_4" class="competition-form__label-right">Накупил сувениров</label>
-              </div>
-              <div class="competition-form__checkbox-wrapper">
-                <input type="checkbox" class="competition-form__checkbox" name="fact_5" id="fact_5" checked>
-                <label for="fact_5" class="competition-form__label-right">Удержал башню</label>
-              </div>
-              <div class="competition-form__checkbox-wrapper">
-                <input type="checkbox" class="competition-form__checkbox" name="fact_6" id="fact_6">
-                <label for="fact_6" class="competition-form__label-right">Разгромил отель</label>
-              </div>
+            <div class="competition-form__checkbox-wrapper">
+              <input type="checkbox" class="competition-form__checkbox" name="fact_1" id="fact_1">
+              <label for="fact_1" class="competition-form__label-right">Сделал селфи с акулой</label>
+            </div>
+            <div class="competition-form__checkbox-wrapper">
+              <input type="checkbox" class="competition-form__checkbox" name="fact_2" id="fact_2">
+              <label for="fact_2" class="competition-form__label-right">Обгорел на пляже</label>
+            </div>
+            <div class="competition-form__checkbox-wrapper">
+              <input type="checkbox" class="competition-form__checkbox" name="fact_3" id="fact_3">
+              <label for="fact_3" class="competition-form__label-right">Видел Чака Норриса</label>
+            </div>
+            <div class="competition-form__checkbox-wrapper">
+              <input type="checkbox" class="competition-form__checkbox" name="fact_4" id="fact_4" checked>
+              <label for="fact_4" class="competition-form__label-right">Накупил сувениров</label>
+            </div>
+            <div class="competition-form__checkbox-wrapper">
+              <input type="checkbox" class="competition-form__checkbox" name="fact_5" id="fact_5" checked>
+              <label for="fact_5" class="competition-form__label-right">Удержал башню</label>
+            </div>
+            <div class="competition-form__checkbox-wrapper">
+              <input type="checkbox" class="competition-form__checkbox" name="fact_6" id="fact_6">
+              <label for="fact_6" class="competition-form__label-right">Разгромил отель</label>
+            </div>
           </div>
-       </div>
+        </div>
+
+        <!--[if lte IE]>
+            <style type="text/css">
+                .competition-form__block--2 .competition-form__block-wrapper {
+                    font-size: 11px;
+                }
+            </style>
+        <![endif]-->
 
         <div class="competition-form__block competition-form__block--3">
           <h2 class="competition-form__block-header">Контактная информация</h2>
@@ -102,8 +110,8 @@
             <input type="tel" class="competition-form__text-input competition-form__text-input--mobile-view" name="phone" id="phone-m" placeholder="Номер, пожалуйста">
             <div class="competition-form__input-decor competition-form__input-decor--phone"></div>
             <div class="competition-form__input-wrapper">
-                <input type="tel" class="competition-form__text-input competition-form__text-input--other-view" name="phone" id="phone" placeholder="+7 XXX XXX-XX-XX">
-                <div class="competition-form__input-decor competition-form__input-decor--phone"></div>
+              <input type="tel" class="competition-form__text-input competition-form__text-input--other-view" name="phone" id="phone" placeholder="+7 XXX XXX-XX-XX">
+              <div class="competition-form__input-decor competition-form__input-decor--phone"></div>
             </div>
             <label for="phone" class="competition-form__label-up competition-form__label-up--other-view">Номерок телефончика</label>
           </div>
@@ -112,8 +120,8 @@
             <input type="email" class="competition-form__text-input competition-form__text-input--mobile-view" name="mail" id="mail-m" placeholder="Введите почту *">
             <div class="competition-form__input-decor competition-form__input-decor--mail"></div>
             <div class="competition-form__input-wrapper">
-                <input type="email" class="competition-form__text-input competition-form__text-input--other-view" name="mail" id="mail" placeholder="E-mail, пожалуйста">
-                <div class="competition-form__input-decor competition-form__input-decor--mail"></div>
+              <input type="email" class="competition-form__text-input competition-form__text-input--other-view" name="mail" id="mail" placeholder="E-mail, пожалуйста">
+              <div class="competition-form__input-decor competition-form__input-decor--mail"></div>
             </div>
             <label for="mail" class="competition-form__label-up competition-form__label-up--other-view">Адресок почты</label>
           </div>
@@ -122,19 +130,19 @@
         <div class="competition-form__block competition-form__block--4">
           <h2 class="competition-form__block-header">С каким приложением путешествовали?</h2>
           <div class="competition-form__block-wrapper">
-          <input type="radio" class="competition-form__radio" name="app-ios" value="ios" id="os_1">
-          <label for="os_1" class="competition-form__label-right">Pink для iOS</label>
-          <input type="radio" class="competition-form__radio" name="app-ios" value="android" id="os_2" checked>
-          <label for="os_2" class="competition-form__label-right">Pink на Android</label>
-          <input type="radio" class="competition-form__radio" name="app-ios" value="windows" id="os_3">
-          <label for="os_3" class="competition-form__label-right">Windows Phone</label>
+            <input type="radio" class="competition-form__radio" name="app-ios" value="ios" id="os_1">
+            <label for="os_1" class="competition-form__label-right">Pink для iOS</label>
+            <input type="radio" class="competition-form__radio" name="app-ios" value="android" id="os_2" checked>
+            <label for="os_2" class="competition-form__label-right">Pink на Android</label>
+            <input type="radio" class="competition-form__radio" name="app-ios" value="windows" id="os_3">
+            <label for="os_3" class="competition-form__label-right">Windows Phone</label>
           </div>
         </div>
 
         <div class="competition-form__block competition-form__block--5">
           <div class="competition-form__block-wrapper">
-          <h2 class="competition-form__block-header">Опишите свои эмоции</h2>
-          <textarea name="emotions-decr" id="emotions_descr" cols="24" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+            <h2 class="competition-form__block-header">Опишите свои эмоции</h2>
+            <textarea name="emotions-decr" id="emotions_descr" cols="24" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </div>
         </div>
         <div class="competition-form__submit-wrapper">
@@ -148,8 +156,7 @@
     <footer class="page-footer page-footer--form">
       <picture>
         <source media="(min-width: 960px)" srcset="img/logo-pink-blue-desktop.svg">
-        <img class="page-footer__app-logo" width="147" height="41" src="img/logo-pink-blue-mobile.svg"
-        alt="Logo PINK">
+        <img class="page-footer__app-logo" width="147" height="41" src="img/logo-pink-blue-mobile.svg" alt="Logo PINK">
       </picture>
       <div class="social-links">
         <a class="social-links__item social-links__item--tw" href="https://twitter.com"></a>
@@ -159,8 +166,7 @@
       <p class="page-footer__copyright">
         Разработано:
         <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-            <svg class="page-footer__copyright-logo" width="27" height="34" version="1.0" id="Layer_1" x="0px" y="0px"
-            fill="#d22856" viewbox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+          <svg class="page-footer__copyright-logo" width="27" height="34" version="1.0" id="Layer_1" x="0px" y="0px" fill="#d22856" viewbox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
             <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334
               l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5
               l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787
@@ -172,36 +178,36 @@
     </footer>
 
     <div class="modal" style="display:none">
-        <h3 class="modal__title">Что-то пошло не так!</h3>
-        <p class="modal__content">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-        <button class="modal__button">Ok</button>
+      <h3 class="modal__title">Что-то пошло не так!</h3>
+      <p class="modal__content">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      <button class="modal__button">Ok</button>
     </div>
 
     <div class="modal modal--success" style="display:none">
-        <h3 class="modal__title">Ваша заявка отправлена</h3>
-        <p class="modal__content">Спасибо за ваше участие, ваша заявка уже поступила к нам.
-            В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-        <div class="modal__button-wrapper">
-            <button class="modal__button">Закрыть окно </button>
-        </div>
+      <h3 class="modal__title">Ваша заявка отправлена</h3>
+      <p class="modal__content">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+      <div class="modal__button-wrapper">
+        <button class="modal__button">Закрыть окно </button>
+      </div>
     </div>
 
   </div>
   <script>
-    var navMain = document.querySelector(' .main-nav');
-    var navToggle = document.querySelector('.main-nav__toggle');
+    var navMain = document.querySelector(" .main-nav");
+    var navToggle = document.querySelector(".main-nav__toggle");
 
-    navMain.classList.remove ('main-nav--nojs');
+    navMain.classList.remove("main-nav--nojs");
 
-    navToggle.addEventListener('click', function() {
-      if (navMain.classList.contains('main-nav--closed')) {
-        navMain.classList.remove('main-nav--closed');
-        navMain.classList.add('main-nav--opened');
+    navToggle.addEventListener("click", function() {
+      if (navMain.classList.contains("main-nav--closed")) {
+        navMain.classList.remove("main-nav--closed");
+        navMain.classList.add("main-nav--opened");
       } else {
-        navMain.classList.add('main-nav--closed');
-        navMain.classList.remove('main-nav--opened');
+        navMain.classList.add("main-nav--closed");
+        navMain.classList.remove("main-nav--opened");
       }
     });
   </script>
-  </body>
+</body>
+
 </html>
