--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <li class="reviews__slide slider__slide">
               <blockquote class="reviews-slide__wrapper">
                 <cite class="reviews-slide__auhor-name">
-                <div>Николай Петров</div>
+                <b>Николай Петров</b>
               <span class="reviews-slide__info">25 лет, водитель трамвая</span></cite>
                 <p class="reviews-slide__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
               </blockquote>
@@ -125,7 +125,7 @@
             <li class="reviews__slide slider__slide">
               <blockquote class="reviews-slide__wrapper">
                 <cite class="reviews-slide__auhor-name">
-                  <div>Миша Песков</div>
+                  <b>Миша Песков</b>
               <span class="reviews-slide__info">25 лет, водитель трамвая</span></cite>
                 <p class="reviews-slide__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
               </blockquote>
@@ -133,7 +133,7 @@
             <li class="reviews__slide slider__slide">
               <blockquote class="reviews-slide__wrapper">
                 <cite class="reviews-slide__auhor-name">
-                  <div>Петр матросов</div>
+                  <b>Петр матросов</b>
               <span class="reviews-slide__info">25 лет, водитель трамвая</span></cite>
                 <p class="reviews-slide__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
               </blockquote>
