--- a/photo.html
+++ b/photo.html
@@ -169,7 +169,7 @@
           <picture class="photo-constructor__photo">
             <source media="(min-width: 960px)" srcset="img/photo-7-desktop@1x.jpg 1x, img/photo-7-desktop@2x.jpg 2x">
             <source media="(min-width: 640px)" srcset="img/photo-7-tablet@1x.jpg 1x, img/photo-7-tablet@2x.jpg 2x">
-            <img class="photo-constructor__constructor-object" src="img/photo-7-mobile@1x.jpg" src="img/photo-7-mobile@2x.jpg 2x" width="280" height="374" alt="Winter">
+            <img class="photo-constructor__constructor-object" src="img/photo-7-mobile@1x.jpg" srcset="img/photo-7-mobile@2x.jpg 2x" width="280" height="374" alt="Winter">
           </picture>
           <fieldset class="photo-constructor__tools">
             <div class="photo-constructor__control">
